--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/material": "^20.2.1",
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
+    "@microsoft/signalr": "^9.0.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
