--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "@angular/router": "^20.2.0",
     "@microsoft/signalr": "^9.0.6",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "underscore": "^1.13.7"
   },
   "devDependencies": {
     "@angular/build": "^20.2.1",
     "@angular/cli": "^20.2.1",
     "@angular/compiler-cli": "^20.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/underscore": "^1.13.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
