--- a/angular.json
+++ b/angular.json
@@ -62,6 +62,9 @@
               "buildTarget": "sqlite-web-demo:build:development"
             }
           },
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
